# Medical-Appointment

./: .env  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  medical_appointment_schema.sql  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: auth.py  calendly_integration.py
backend/data/: doctor_schedule.json
backend/db/: appointments.json  database.py  doctor_schedule.json
backend/models/: auth_schemas.py  schemas.py
backend/tools/: availability_tool.py  booking_tool.py
backend/utils/: jwt_handler.py
tests/: README.md  conftest.py  test_appointments.py  test_auth.py  test_root.py
